--- a/viral.html
+++ b/viral.html
@@ -13,7 +13,7 @@
     </style>
   </head>
   <body>
-    <strong>The Spread of Ideas</strong>
+    <strong>Spreading ideas</strong>
     <p>
       The most dangerous ideas are the ones that feel right immediately. When
       someone presents you with a view that slides perfectly into your mental
