--- a/viral.html
+++ b/viral.html
@@ -38,7 +38,7 @@
       Israel-Palestine conflict will get far fewer shares than a tweet saying "X
       group is clearly evil." The latter spreads not because it's true, but
       because it's easy to understand and matches what certain groups already
-      believe.
+      believe. It's also why Malcolm Gladwell and Yuval Hariri's books do well.
       <br /><br />
       QVC sells products by matching people's intuitive but incorrect models of
       how things work. A water filter commercial shows red dots pulsing in
