fix mobile padding

--- a/mp.html
+++ b/mp.html
@@ -10,6 +10,11 @@
         padding: 5em;
         max-width: 500px;
       }
+      @media (max-width: 600px) {
+        body {
+          padding: 1.5em;
+        }
+      }
     </style>
   </head>
   <body>
